--- a/learnhtml.html
+++ b/learnhtml.html
@@ -78,16 +78,18 @@
 				background-color:rgb(255, 90, 90);
 				}
         </style>
+		  <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
+
     </head>
     <body>
    <h1 class="header" style="background-color:red; position:fixed; top:-5px; z-index:100;">CAProductions HTML Tutorial</h1>
 	
-   <h1 class="header" style="background-color:red; position:fixed; right:10px; top:-5px; z-index:101; "><a href="/home/" style="text-decoration:none; color:white;">Back To Home Page</a></h1>
+   <h1 class="header" style="background-color:red; position:fixed; right:10px; top:-5px; z-index:101; "><a href="/home/" style="text-decoration:none; color:white;">Back to Home Page</a></h1>
 	
-	<div id="page_zoom" onclick="this.style.display='none'" style="display:block; font-size:40px; position:fixed; top:50%; left:50%; border:20px solid white; transform: translate(-50%, -50%);"><h3>Set page zoom to 100%</h3><p>To get the best experience out of our website we recomend that you set the page zoom to 100%.</p>
+	<div id="page_zoom" onclick="this.style.display='none'" style="display:block; font-size:40px; position:fixed; top:50%; left:50%; border:20px solid white; transform: translate(-50%, -50%);"><h3>Set page zoom to 100%</h3><p>To get the best experience out of our website we recommend that you set the page zoom to 100%.</p>
 	<p id="got_it" style="border:1px solid white; border-radius:7px; text-align:center; width:50%; text-align:center; transform: translate(50%, 50%);">Got it!</p></div>
 	
-   <details class="header" style="background-color:red; position:fixed; right:420px; top:17px; z-index:102; font-size:2em; ">
+    <details class="header" style="background-color:red; position:fixed; right:420px; top:17px; z-index:102; font-size:2em; ">
        <summary>
            <b>Jump To</b>
        </summary>
@@ -105,8 +107,8 @@
     	 <li><a class="navi_link" href="#l9">Lesson 9: Unorginized Lists</a></li>
       </ul></div>
    </details>
-  <div id="body"><br><br><br><br><br> <h2 id="top">A Step To Step Guide on HTML Webpage Design</h2>
-   <p>When You first Start off with a new Website Add this Base to it</p>
+  <div id="body"><br><br><br><br><br> <h2 id="top">A step to step guide on HTML web page design</h2>
+   <p>When you first start off with a new website add this base to it</p>
    <br>
    <div class="code"><p>&lt;!DOCTYPE html>
    <br>
@@ -127,9 +129,9 @@
    <br>
    &lt;/html>
    </p></div>
-   <p>It might Not Make Much Sense Right Now But It Will Soon.</p>
-   <h3 id="l1">Lesson 1: The &lt;p> tag</h3>
-   <p>The &lt;P> Tag Is One Of the greatest in the website designers toolbox, infact you are reading text created by it right now!<br>If You havn't Guessed Already the &lt;p> Tag Makes A Paragraph On The Webpage, The "&lt;" At the Begging And end of it signal<br>The Computer That it is a tag, if you dont use them then your code will not work.<br>Lets Add One To Our Code Right Now, Put A &lt;p> Tag Right Below Your &lt;Body> Tag:</p>
+   <p>It might not make much sense right now but it will soon.</p>
+   <h3 id="l1">Lesson 1:the&lt;p> tag</h3>
+   <p>The &lt;P> tag is one of the greatest in the website designers toolbox, in fact you are reading text created by it right now!<br>If you haven't guessed already the &lt;p> tag makes a paragraph on the webpage, the "&lt;" at the beginning and end of it signal<br>the computer that it is a tag, if you don't use them then your code will not work.<br>Lets add one to our code right now, put a &lt;p> tag right below your &lt;body> tag:</p>
    <br>
    <div class="code"><p>&lt;!DOCTYPE html>
    <br>
@@ -151,15 +153,15 @@
    <br>
    &lt;/html>
    </p></div>
-   <br><p>Now Put Any Text After It.<br>Hopefully It Worked But Now Another Issue Arises "How Do I Create Line Breaks?" You can't Just Press Enter Because The Computer<br> Dosnt Recongnize that. In This Case We Need:</p>
- <h3 id="l2">Lesson 2: The &lt;br> tag</h3>
- <p>If You Want To Create A Line Break In Your Text You Could Either:</p>
+   <br><p>now put any text after it.<br>hopefully it worked but now another issue arises "how do I create line breaks?" You can't just press enter because the computer<br> doesn't recognize that. In this case we need:</p>
+ <h3 id="l2">Lesson 2:the&lt;br> tag</h3>
+ <p>If you want to create a line break in your text you could either:</p>
  <ul>
-     <li>Use A &lt;/p> to End The Paragraph (more on that later)</li>
-     <li>Use The &lt;br> Tag to Create A Linebreak</li>
-     <li>Give Up and Face defeat</li>
+     <li>Use a &lt;/p> to end the paragraph (more on that later)</li>
+     <li>Use the &lt;br> tag to create a line break</li>
+     <li>Give up and face defeat</li>
  </ul>
- <p>In My Personal Opinion I Would Use The &lt;br> Tag But Ending The Paragraph and starting a new one also works.<br>Here Is An Example Of How To Use A Line Break:</p>
+ <p>In my personal opinion I would use the &lt;br> tag but ending the paragraph and starting a new one also works.<br>here is an example of how to use a line break:</p>
 <div class="code"><p>&lt;!DOCTYPE html>
    <br>
    &lt;html>
@@ -174,17 +176,17 @@
    <br>
    &lt;body>
    <br>
-   &lt;p>Jhon slamed The Door Shut &lt;br> He Was So Mad That He Was Beaten By A 3rd Grader
+   &lt;p>John slammed the door shut &lt;br> He was so mad that he was beaten by a 3rd grader
    <br>
    &lt;/body>
    <br>
    &lt;/html>
    </p></div>
-   <p>Here's What That Would Look Like:</p>
-   <div class="codeex"><p>Jhon slamed The Door Shut<br> He Was So Mad That He Was Beaten By A 3rd Grader
+   <p>here's what that would look like:</p>
+   <div class="codeex"><p>John slammed the door shut<br> he was so mad that he was beaten by a 3rd grader
    </p></div>
    <h3 id="l3">Lesson 3: Ending tags</h3>
-   <p>Remember How Earlier I was talking About ending the paragraph and starting a new one instead of using a line break?<br> Adding a "/" before the letters in a tag creates an ending tag, Most tags need these to function proporly<br>One Of the only tags that doesnt is the &lt;br> Tag. This is Usefull For things such as adding headers and many other HTML <br>Tags Afterward. Having A Ending Tag can also Make A New Paragraph Just like the &lt;br> Tag although it is much easier to use the<br>&lt;br> Tag. <br> Here Is an example of when you could use an ending tag instead of a &lt;br> tag:</p>
+   <p>Remember how earlier I was talking about ending the paragraph and starting a new one instead of using a line break?<br> adding a "/" before the letters in a tag creates an ending tag, most tags need these to function properly<br>One of the only tags that doesnt is the &lt;br> tag. This is useful for things such as adding headers and many other HTML <br>tags afterward. Having a ending tag can also make a new paragraph just like the &lt;br> tag although it is much easier to use the<br>&lt;br> tag. <br> here Is an example of when you could use an ending tag instead of a &lt;br> tag:</p>
    <div class="code"><p>&lt;!DOCTYPE html>
    <br>
    &lt;html>
@@ -199,26 +201,26 @@
    <br>
    &lt;body>
    <br>
-   &lt;p>Jhon slamed The Door Shut &lt;br> He Was So Mad That He Was Beaten By A 3rd Grader&lt;/p>
+   &lt;p>John slammed the door shut &lt;br> he was so mad that he was beaten by a 3rd grader&lt;/p>
    <br>
-   &lt;p>"Are you okay up There?" His Mom Called&lt;/p>
+   &lt;p>"Are you okay up there?" His Mom called&lt;/p>
    <br>
-   &lt;p>"Doing Great" Jhon said Sarcasticly&lt;/p>
+   &lt;p>"Doing great" John said sarcastically&lt;/p>
    <br>
    &lt;/body>
    <br>
    &lt;/html>
    </p></div>
-   <p>Here's What it would look like:</p>
-   <div class="codeex"><p>Jhon slamed The Door Shut<br>
-He Was So Mad That He Was Beaten By A 3rd Grader</p>
+   <p>here's what it would look like:</p>
+   <div class="codeex"><p>John slammed the door shut<br>
+He was so mad that he was beaten by a 3rd grader</p>
 
-<p>"Are you okay up There?" His Mom Called</p>
+<p>"Are you okay up there?" His Mom called</p>
 
-<p>"Doing Great" Jhon said Sarcasticly</p>
+<p>"Doing great" John said sarcastically</p>
    </div>
    <h3 id="l4">Lesson 4: Headers</h3>
-	<p>So Right Now Our text is kinda Small, And Say i want to make a book. I need A <b>Title</b> and A <b>Chapter Title</b>.<br>Lets Add A Header To Our Webpage. You Can Use The &lt;h1> Tag for that. <br> The 1 In &lt;h1> Is THe Size, 1 is the biggest 6 is the smallest. Im Going to add a title And A Chapter To My Code:</p>
+	<p>So right now our text is kinda small, and say I want to make a book. I need a <b>Title</b> and a <b>Chapter Title</b>.<br>Lets add a Header to our Webpage. You Can Use the&lt;h1> Tag for that. <br> the 1 In &lt;h1> Is THe Size, 1 is the biggest 6 is the smallest. I'm Going to add a title and a Chapter to My Code:</p>
 	  <div class="code"><p>&lt;!DOCTYPE html>
    <br>
    &lt;html>
@@ -233,28 +235,28 @@ He Was So Mad That He Was Beaten By A 3rd Grader</p>
    <br>
    &lt;body>
 	<br>
-	&lt;h1>Jhon And The Speedy Kid&lt;/h1>
+	&lt;h1>Jhon and the Speedy Kid&lt;/h1>
    <br>
-	&lt;h3>Chapter 1: The Loss&lt;/h3>
-   &lt;p>Jhon slamed The Door Shut &lt;br> He Was So Mad That He Was Beaten By A 3rd Grader&lt;/p>
+	&lt;h3>Chapter 1: the Loss&lt;/h3>
+   &lt;p>John slammed the door shut &lt;br> He Was So Mad that He Was Beaten By a 3rd Grader&lt;/p>
    <br>
    &lt;p>"Are you okay up There?" His Mom Called&lt;/p>
    <br>
-   &lt;p>"Doing Great" Jhon said Sarcasticly&lt;/p>
+   &lt;p>"Doing Great" John said sarcastically&lt;/p>
    <br>
    &lt;/body>
    <br>
    &lt;/html>
    </p></div>
-	<p>heres What it would look like:</p>
-	<div class="codeex"><h1>Jhon And The Speedy Kid</h1>
-<h3>Chapter 1: The Loss</h3>
-<p>Jhon slamed The Door Shut <br> He Was So Mad That He Was Beaten By A 3rd Grader</p>
+	<p>here's what it would look like:</p>
+	<div class="codeex"><h1>John and the speedy Kid</h1>
+<h3>Chapter 1:theLoss</h3>
+<p>John slammed the door shut <br> He Was So Mad that He Was Beaten By a 3rd Grader</p>
 <p>"Are you okay up There?" His Mom Called</p>
-<p>"Doing Great" Jhon said Sarcasticly</p>
+<p>"Doing Great" John said sarcastically</p>
    </div>
 	<h3 id="l5">Lesson 5: CSS</h3>
-<p> Now That You Know How To Get Text On your screen You Might Want to start Changing The Colors Of the bacground and text, Right?<br>For That We Are Going to need CSS, First Step Lets Add A &lt;style> Tag Underneath or &lt;title> Tag in our head:</p>
+<p> Now that You Know how to Get text On Your screen You Might Want to start Changing the colors of the background and text, right?<br>For that we are going to need CSS, First lets add a &lt;style> tag underneath or &lt;title> tag in our head:</p>
   <div class="code"><p>&lt;!DOCTYPE html>
    <br>
    &lt;html>
@@ -274,20 +276,20 @@ He Was So Mad That He Was Beaten By A 3rd Grader</p>
    <br>
    &lt;body>
 	<br>
-	&lt;h1>Jhon And The Speedy Kid&lt;/h1>
+	&lt;h1>Jhon and the speedy Kid&lt;/h1>
    <br>
-	&lt;h3>Chapter 1: The Loss&lt;/h3>
-   &lt;p>Jhon slamed The Door Shut &lt;br> He Was So Mad That He Was Beaten By A 3rd Grader&lt;/p>
+	&lt;h3>Chapter 1:theLoss&lt;/h3>
+   &lt;p>John slammed the door shut &lt;br> He Was So Mad that He Was Beaten By a 3rd Grader&lt;/p>
    <br>
    &lt;p>"Are you okay up There?" His Mom Called&lt;/p>
    <br>
-   &lt;p>"Doing Great" Jhon said Sarcasticly&lt;/p>
+   &lt;p>"Doing Great" John said sarcastically&lt;/p>
    <br>
    &lt;/body>
    <br>
    &lt;/html>
    </p></div>
-	<p>Lets Say i Want to make My background a nice paper white and my text black, what i am going to do is underneath style write: body{color:; background-color:;} make sure to use the curly brakets "{}", Heres an example:</p>
+	<p>Lets say I want to make my background a nice paper white and my text black, what Iam going to do is underneath style write: body{color:; background-color:;} make sure to use the curly brackets "{}", here's an example:</p>
 <div class="code"><p>&lt;!DOCTYPE html>
    <br>
    &lt;html>
@@ -314,28 +316,28 @@ He Was So Mad That He Was Beaten By A 3rd Grader</p>
    <br>
    &lt;body>
 	<br>
-	&lt;h1>Jhon And The Speedy Kid&lt;/h1>
+	&lt;h1>Jhon and the speedy Kid&lt;/h1>
    <br>
-	&lt;h3>Chapter 1: The Loss&lt;/h3>
-   &lt;p>Jhon slamed The Door Shut &lt;br> He Was So Mad That He Was Beaten By A 3rd Grader&lt;/p>
+	&lt;h3>Chapter 1:theLoss&lt;/h3>
+   &lt;p>John slammed the door shut &lt;br> He Was So Mad that He Was Beaten By a 3rd Grader&lt;/p>
    <br>
    &lt;p>"Are you okay up There?" His Mom Called&lt;/p>
    <br>
-   &lt;p>"Doing Great" Jhon said Sarcasticly&lt;/p>
+   &lt;p>"Doing Great" John said sarcastically&lt;/p>
    <br>
    &lt;/body>
    <br>
    &lt;/html>
    </p></div>
-	<p>Here's What that would look like:</p>
-	<div class="codeex" style="background-color:rgb(255, 255, 255); color:rgb(0, 0, 0);"><h1>Jhon And The Speedy Kid</h1>
-<h3>Chapter 1: The Loss</h3>
-<p>Jhon slamed The Door Shut <br> He Was So Mad That He Was Beaten By A 3rd Grader</p>
+	<p>here's what that would look like:</p>
+	<div class="codeex" style="background-color:rgb(255, 255, 255); color:rgb(0, 0, 0);"><h1>John and the speedy Kid</h1>
+<h3>Chapter 1:theLoss</h3>
+<p>Jhon slammed the door shut <br> He Was So Mad that He Was Beaten By a 3rd Grader</p>
 <p>"Are you okay up There?" His Mom Called</p>
-<p>"Doing Great" Jhon said Sarcasticly</p>
+<p>"Doing Great" John said sarcastically</p>
    </div>
 	<h3 id="l6">Lesson 6: Id Selectors</h3>
-	<p> if you only want to change the style of one paragraph or header you can use an id. if you were to use one in a paragraph the tag would look like: &lt;p id="p1">. Then In your style section you can refrence just that id using #youridname then all the stuff you would normally out after it here is an example:</p>
+	<p> if you only want to change the style of one paragraph or header you can use an id. If you were to use one in a paragraph the tag would look like: &lt;p id="p1">. Then In your style section you can reference just that id using #youridname then all the stuff you would normally out after it here is an example:</p>
 	<div class="code"><p>&lt;!DOCTYPE html>
    <br>
    &lt;html>
@@ -372,26 +374,26 @@ He Was So Mad That He Was Beaten By A 3rd Grader</p>
    <br>
    &lt;body>
 	<br>
-	&lt;p id="red">This Text Is Red&lt;/p><br>
-	&lt;p id="green">This Text Is Green&lt;/p><br>
-	&lt;p id="blue">This Text Is Blue&lt;/p><br>
+	&lt;p id="red">This text Is Red&lt;/p><br>
+	&lt;p id="green">This text Is Green&lt;/p><br>
+	&lt;p id="blue">This text Is Blue&lt;/p><br>
 	&lt;/body>
    <br>
    &lt;/html>
    </p></div>
    
    <p> This Is what that would look like:</p>
-   <div class="codeex"><p style="color:rgb(255, 0, 0);">This Text Is Red</p><p style="color:rgb(0, 255, 0);">This Text Is Green</p><p style="color:rgb(0, 0, 255);">This Text Is Blue</p></div>
+   <div class="codeex"><p style="color:rgb(255, 0, 0);">This text Is Red</p><p style="color:rgb(0, 255, 0);">This text Is Green</p><p style="color:rgb(0, 0, 255);">This text Is Blue</p></div>
 	
 	<h3 id="l7">Lesson 7: Other CSS Tags</h3>
-	<p>Background-color and color anrnt the only CSS Tags, Here is a list of other usefull tags for text:</p>
+	<p>Background-color and color aren't the only CSS Tags, here is a list of other useful tags for text:</p>
 	<ul>
 	<li>text-size:10px;</li>
 	<li>text-decoration:underline;</li>
 	<li>text-align:center;</li>
 	<li>font-weight:bold;</li>
 	</ul>
-	<p>Those Are Just A Few Of The Other Tags You Could Use<br>Here Are Some Ways to use them:</p>
+	<p>Those are just a few of the other tags you could use<br>here are some ways to use them:</p>
 	<div class="code"><p>&lt;!DOCTYPE html>
    <br>
    &lt;html>
@@ -446,20 +448,21 @@ He Was So Mad That He Was Beaten By A 3rd Grader</p>
    <br>
    &lt;/html>
    </p></div>
-   <p>Here's What That Would Look Like</p>
+   <p>here's what that would look like</p>
 	 <div class="codeex"><p style="font-size:40px;">font-size</p>
 <p style="text-decoration:underline;">text-decoration</p>
 <p style="text-align:center;">text-align</p>
 <p style="font-weight:bold;">font-weight</p></div>
-	<h3 id="l8">Lesson 8: Orginized Lists</h3>
-	<p>If You Want To Make A List There Are 2 Ways to do it, You Can Either Use A Orginized List:
+	<h3 id="l8">Lesson 8: Organized Lists</h3>
+	<p>If you want to make a list there are 2 ways to do it, you can either use an organized list which is numbered :
 	<ol>
 	<li>Nintendo</li>
 	<li>Xbox</li>
 	<li>Playstation</li>
 	</ol>
-	Or you could use an unorginized list. <br>To Start An orginized list use the &lt;ol> 
+	Or you could use an unorginized list. <br>to Start an organized list use the &lt;ol> 
 	<h3 id="l9">Lesson 9: Unorginized Lists</h3>
-    </div><div id="footer"><p>Big Thanks to <a href="https://pikapower9080.github.io/">Pikapower9080</a> For Teaching Me The Ins And Out's Of HTML, Check Them Out If you get the chance.<br><p>Well, Thats All For Now. If you have any ideas for things i could add then <span title="No, My DM's Are not open. Infact i dont even have any DMs.">my DMs are open</span></p>
+    </div><div id="footer"><p>Big Thanks to <a href="https://pikapower9080.github.io/">Pikapower9080</a> For Teaching Me theIns and Out's Of HTML, Check Them Out If you get the chance.<br><p><a target="_blank" href="https://icons8.com/icon/86796/circle">Circle</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a></p><br><p>Well, that's all For Now. If you have any ideas for things I could add then <span title="No, My DM's are not open. In Fact I Don't even have any DMs.">my DMs are open</span></p>
 	 </div></body>
 </html>
+
