Lots of general fixes, enjoy!!

--- a/index.html
+++ b/index.html
@@ -16,17 +16,18 @@
 			color:blue;
 		  }
     </style>
-	  <link rel="shortcut icon" type="image/png" href="/scratch_assets/favicon.png"/>
-
+	  <link rel="icon" href="/assets/favicon.png"/>
+    <link rel="stylesheet" href="/style.css">
+    <link rel="icon" href="/assets/favicon.png">
   </head>
   <body>
     <h1 class="indexpx">CA Productions Home Page</h1>
     <p class="indexpx">CA Productions Home.</p>
-    <p class="indexpx">Check Out Our Favorite Rated games <a href="/home/the-best-video-games.html" class="link">Here</a><br>
-      Also There Are Some Cool Things You Can Do <a href="/home/coolstuff.html" class="link">Here</a><br>
-      Check Out Our Scratch Projects <a href="/home/scratch.html" class="link">Here</a><br>
-	  Find out how to create your own website just like this <a href="/home/learnhtml.html" class="link">Here</a><br></p>
-      <a href="https://Caproductions.github.io/home">
+    <p class="indexpx">Check Out Our Favorite Rated games <a href="the-best-video-games.html" class="link">Here</a><br>
+      Also There Are Some Cool Things You Can Do <a href="coolstuff.html" class="link">Here</a><br>
+      Check Out Our Scratch Projects <a href="scratch/index.html" class="link">Here</a><br>
+	  Find out how to create your own website just like this <a href="learnhtml.html" class="link">Here</a><br></p>
+      <a href="">
         <button class="button">
     Meet The Creators
        
