--- a/scratch/index.html
+++ b/scratch/index.html
@@ -16,9 +16,12 @@
 			color:blue;
 		  }
       </style>
+      <link rel="stylesheet" href="/style.css">
+      <link rel="icon" href="/assets/favicon.png">
+
     </head>
     <body>
-<img src="https://www.vippng.com/png/full/244-2449674_file-scratchlogo-svg-scratch-logo-png.png" alt="Scratch Logo" width="700">
+<img src="https://www.vippng.com/png/full/244-2449674_file-scratchlogo-svg-scratch-logo-png.png" alt="Scratch Logo" width="400">
       
       <h2>About Scratch</h2>
       <p>With Scratch, you can program your own interactive stories, games, and animations — and share your creations with others in the online community.<br>
@@ -26,7 +29,6 @@
 Scratch helps young people learn to think creatively, reason systematically, and work collaboratively — essential skills for life in the 21st century.<br>
 
 Scratch is designed, developed, and moderated by the Scratch Foundation, a nonprofit organization. It is provided free of charge.<br>
-        
       <h2>Projects By Us</h2>
       <p> These are some projects that we have created on scratch and would like to share with you<br> Make Sure To Set The Page Zoom to <b>67%</b>
 		
@@ -47,13 +49,13 @@ Scratch is designed, developed, and moderated by the Scratch Foundation, a nonpr
 		</details>
 		</div>
 		
-        <h4 id="boomerangfu_jump"><a href="/home/boomerangfu.html" class="link">Boomerang Fu<br><img src="https://raw.githubusercontent.com/CAProductions/home/main/Screenshot%202021-11-09%209.45.20%20PM.png" width="300" ></a></h4>
+        <h4 id="boomerangfu_jump"><a href="/scratch/boomerangfu.html" class="link">Boomerang Fu<br><img src="/assets/boomerang.png" width="400" ></a></h4>
         <br>
         <br>
-         <h4 id="minecraft3d_jump"><a href="/home/minecraft3d.html" class="link">Minecraft 3D<br><img src="https://raw.githubusercontent.com/CAProductions/home/main/1.png" width="300" ></a></h4>
+         <h4 id="minecraft3d_jump"><a href="/scratch/minecraft3d.html" class="link">Minecraft 3D<br><img src="/assets/mc3d.png" width="400" ></a></h4>
           <br>
         <br>
-         <h4 id="lightsaber_jump"><a href="/home/lightsaber.html" class="link">Light Saber Maker<br><img src="https://raw.githubusercontent.com/CAProductions/home/main/Screenshot%202021-11-10%209.22.22%20AM.png" width="300" ></a></h4>
+         <h4 id="lightsaber_jump"><a href="/scratch/lightsaber.html" class="link">Light Saber Maker<br><img src="/assets/lightsaber.png" width="400" ></a></h4>
         <br>
         <br>
          <h3 class="username"><a target="_blank" href="https://scratch.mit.edu/users/cam0studios/" class="link"><img src="https://cdn2.scratch.mit.edu/get_image/user/default_60x60.png"
