--- a/scratch/minecraft3d.html
+++ b/scratch/minecraft3d.html
@@ -8,9 +8,11 @@
           background-color:rgb(255, 179, 25);
         }
       </style>
+      <link rel="stylesheet" href="/style.css">
+      <link rel="icon" href="/assets/favicon.png">
     </head>
     <body>
-<iframe src="https://scratch.mit.edu/projects/530671012/embed" allowtransparency="true" width="1920" height="1080" frameborder="0" scrolling="no" allowfullscreen></iframe>
+<iframe src="https://scratch.mit.edu/projects/530671012/embed" allowtransparency="true" frameborder="0" scrolling="no" allowfullscreen class="scratchframe"></iframe>
 <br><p>Credit To The <a href="https://scratch.mit.edu">Scratch Team</a> And MIT
   <br>
   <br>
