--- a/learnhtml.html
+++ b/learnhtml.html
@@ -78,7 +78,7 @@
 				background-color:rgb(255, 90, 90);
 				}
         </style>
-		  <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
+		  <link rel="icon" href="Scratch_Assets/favicon.png">
 
     </head>
     <body>
