--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
 			color:blue;
 		  }
     </style>
-	  <link rel="icon" href="/assets/favicon.png"/>
-    <link rel="stylesheet" href="/style.css">
-    <link rel="icon" href="/assets/favicon.png">
+	<link rel="stylesheet" href="/style.css">
+    <link rel="icon" href="/assets/main/favicon-96.png">
   </head>
   <body>
     <h1 class="indexpx">CA Productions Home Page</h1>
