--- a/learnhtml.html
+++ b/learnhtml.html
@@ -462,7 +462,7 @@ He was so mad that he was beaten by a 3rd grader</p>
 	</ol>
 	Or you could use an unorginized list. <br>to Start an organized list use the &lt;ol> 
 	<h3 id="l9">Lesson 9: Unorginized Lists</h3>
-    </div><div id="footer"><p>Big Thanks to <a href="https://pikapower9080.github.io/">Pikapower9080</a> For Teaching Me theIns and Out's Of HTML, Check Them Out If you get the chance.<br><p><a target="_blank" href="https://icons8.com/icon/86796/circle">Circle</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a></p><br><p>Well, that's all For Now. If you have any ideas for things I could add then <span title="No, My DM's are not open. In Fact I Don't even have any DMs.">my DMs are open</span></p>
+    </div><div id="footer"><p>Big Thanks to <a href="https://pikapower9080.github.io/">Pikapower9080</a> For Teaching Me the Ins and Out's Of HTML, check him out now or i will eat all of your cookies!.<br><p><a target="_blank" href="https://icons8.com/icon/86796/circle">Circle</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a></p><br><p>Well, that's all For Now. If you have any ideas for things I could add then <span title="No, My DM's are not open. In Fact I Don't even have any DMs.">my DMs are open</span></p>
 	 </div></body>
 </html>
 
