--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		  }
     </style>
 	<link rel="stylesheet" href="/style.css">
-    <link rel="icon" href="/assets/main/favicon-96.png">
+    <link rel="icon" href="assets/main/favicon-96.png">
   </head>
   <body>
     <h1 class="indexpx">CA Productions Home Page</h1>
