--- a/scratch/boomerangfu.html
+++ b/scratch/boomerangfu.html
@@ -8,8 +8,8 @@
           background-color:rgb(255, 179, 25);
         }
       </style>
-      <link rel="stylesheet" href="/style.css">
-      <link rel="icon" href="/assets/favicon.png">
+      <link rel="stylesheet" href="/home/style.css">
+      <link rel="icon" href="/home/assets/favicon.png">
 
     </head>
     <body>
