Fix paths again

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			color:blue;
 		  }
     </style>
-	<link rel="stylesheet" href="/style.css">
+	<link rel="stylesheet" href="style.css">
     <link rel="icon" href="assets/main/favicon-96.png">
   </head>
   <body>
