--- a/scratch/minecraft3d.html
+++ b/scratch/minecraft3d.html
@@ -8,8 +8,8 @@
           background-color:rgb(255, 179, 25);
         }
       </style>
-      <link rel="stylesheet" href="/style.css">
-      <link rel="icon" href="/assets/favicon.png">
+      <link rel="stylesheet" href="/home/style.css">
+      <link rel="icon" href="/home/assets/favicon.png">
     </head>
     <body>
 <iframe src="https://scratch.mit.edu/projects/530671012/embed" allowtransparency="true" frameborder="0" scrolling="no" allowfullscreen class="scratchframe"></iframe>
