--- a/scratch/index.html
+++ b/scratch/index.html
@@ -49,13 +49,13 @@ Scratch is designed, developed, and moderated by the Scratch Foundation, a nonpr
 		</details>
 		</div>
 		
-        <h4 id="boomerangfu_jump"><a href="/home/scratch/boomerangfu.html" class="link">Boomerang Fu<br><img src="/assets/boomerang.png" width="400" ></a></h4>
+        <h4 id="boomerangfu_jump"><a href="/home/scratch/boomerangfu.html" class="link">Boomerang Fu<br><img src="/home/assets/boomerang.png" width="400" ></a></h4>
         <br>
         <br>
-         <h4 id="minecraft3d_jump"><a href="/home/scratch/minecraft3d.html" class="link">Minecraft 3D<br><img src="/assets/mc3d.png" width="400" ></a></h4>
+         <h4 id="minecraft3d_jump"><a href="/home/scratch/minecraft3d.html" class="link">Minecraft 3D<br><img src="/home/assets/mc3d.png" width="400" ></a></h4>
           <br>
         <br>
-         <h4 id="lightsaber_jump"><a href="/home/scratch/lightsaber.html" class="link">Light Saber Maker<br><img src="/assets/lightsaber.png" width="400" ></a></h4>
+         <h4 id="lightsaber_jump"><a href="/home/scratch/lightsaber.html" class="link">Light Saber Maker<br><img src="/home/assets/lightsaber.png" width="400" ></a></h4>
         <br>
         <br>
          <h3 class="username"><a target="_blank" href="https://scratch.mit.edu/users/cam0studios/" class="link"><img src="https://cdn2.scratch.mit.edu/get_image/user/default_60x60.png"
